# aiomtec2mqtt

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  ARCHITECTURE.md  BASELINE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  codecov.yml  cov.sh  install_systemd_service.sh  mkdocs.yml  mypy.ini  pyproject.toml  release-please-config.json  requirements.txt  requirements_test.txt  requirements_test_pre_commit.txt  setup.cfg
.claude/: settings.local.json
.github/: CONTRIBUTING.md  RELEASE.md  dependabot.yml  release-drafter.yml
aiomtec2mqtt/: __init__.py  _json.py  async_coordinator.py  async_modbus_client.py  async_mqtt_client.py  config.py  config_schema.py  const.py  container.py  coordinator_config.py  exceptions.py  formula_evaluator.py  hass_int.py  health.py  install.py  mock_modbus_server.py  modbus_client.py  mqtt_client.py  mtec_coordinator.py  prometheus_metrics.py  protocols.py  register_models.py  register_processors.py  resilience.py  session_replay.py  shutdown.py  structured_logging.py  sync_coordinator_wrapper.py  testing.py
docs/: index.md
script/: bootstrap  compile-requirements.sh  gen_register_reference.py  lint_kwonly.py  run-in-env.sh  sort_class_members.py
templates/: grafana-dashboard.json  prometheus-alerts.yaml
test_support/: README.md  pyproject.toml
test_support/src/aiomtec2mqtt_test_support/: __init__.py  assertions.py  fakes.py  fixtures.py  transports.py
test_support/src/aiomtec2mqtt_test_support.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_support/tests/: conftest.py  test_smoke.py
tests/: conftest.py  (+19 more)
(+40 files in other folders)
